--- a/style.css
+++ b/style.css
@@ -37,6 +37,16 @@ nav {
   grid-template-columns: 5% 1fr 1fr 1fr 5%;
 }
 
+.chef,
+.hairstyle {
+  position: absolute;
+  bottom: 0%;
+  left: 0%;
+  width: 100%;
+  opacity: 0;
+  pointer-events: none;
+}
+
 .hero {
   overflow: hidden;
   height: 500px;
@@ -49,6 +59,10 @@ nav {
   height: 500px;
   transition: transform 0.3s ease-out;
   cursor: pointer;
+}
+
+.hero a {
+  display: flex;
 }
 
 .model-right {
@@ -251,4 +265,47 @@ nav {
   .details h2 {
     font-size: 18px;
   }
+}
+
+.nav-open {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 50vh;
+  background: #fff;
+  z-index: 1;
+  color: #000;
+  display: grid;
+  grid-template-columns: 5% 1fr 1fr 5%;
+  justify-items: center;
+  align-items: center;
+  text-align: center;
+  transform: translateY(-100%);
+}
+
+.contact {
+  grid-column: 2/3;
+}
+
+.nav-open h3 {
+  font-size: 28px;
+  padding-bottom: 40px;
+}
+
+.nav-open p {
+  font-size: 18px;
+}
+
+.social-links img {
+  padding: 0 20px;
+}
+
+.logo,
+.menu {
+  z-index: 2;
+}
+
+.menu {
+  cursor: pointer;
 }
